kubernetes/infrastructure/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  parentRefs:
    - name: vps-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "argocd.robin-vidal.com"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
